// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test cases for SocialMediaComponent should render snapshot 1`] = `
<SocialMediaComponent
  i18n={Object {}}
  isFromLogin={true}
  navigation={
    Object {
      "navigate": [MockFunction],
    }
  }
  onEmailLogin={[MockFunction]}
  onLoginSuccessAction={[MockFunction]}
  socialMediaItems={
    Array [
      Object {
        "client_id": "1008014324415-kclkc41epc41nqjp0uc4gdgg528m1nc6.apps.googleusercontent.com",
        "description": "with Google",
        "provider": "GOOGLE",
      },
      Object {
        "client_id": "",
        "description": "with Facebook",
        "provider": "FACEBOOK",
      },
      Object {
        "client_id": "",
        "description": "with Linkedin",
        "provider": "LINKEDIN",
      },
    ]
  }
  t={[Function]}
  tReady={false}
/>
`;

exports[`Test cases for SocialMediaComponent should render snapshot from email login 1`] = `
<SocialMediaComponent
  i18n={Object {}}
  isFromLogin={false}
  navigation={
    Object {
      "navigate": [MockFunction],
    }
  }
  onEmailLogin={[MockFunction]}
  onLoginSuccessAction={[MockFunction]}
  socialMediaItems={
    Array [
      Object {
        "client_id": "1008014324415-kclkc41epc41nqjp0uc4gdgg528m1nc6.apps.googleusercontent.com",
        "description": "with Google",
        "provider": "GOOGLE",
      },
      Object {
        "client_id": "",
        "description": "with Facebook",
        "provider": "FACEBOOK",
      },
      Object {
        "client_id": "",
        "description": "with Linkedin",
        "provider": "LINKEDIN",
      },
    ]
  }
  t={[Function]}
  tReady={false}
/>
`;
